<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:id="@+id/coorDetail"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/mCollapsingDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginBottom="32dp"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/mImgDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/transition_image"
                android:clickable="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="bottom"
                android:background="@drawable/header_text" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/mToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingRight="18dp"
        android:paddingLeft="18dp"
        android:paddingTop="10dp">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/mImgFlickUser"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@mipmap/ic_launcher"
                        android:scaleType="centerCrop"
                        android:transitionName="@string/transition_image_user"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/app_name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/mTxtFlickNameUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Usuario"
                            android:fontFamily="sans-serif-normal"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/mTxtFlickTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Titulo"
                            android:fontFamily="sans-serif-light"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="16.5sp"
                            android:transitionName="@string/transition_title" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/mTxtFlickDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="12 Dic"
                        android:fontFamily="sans-serif-light"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="14sp"
                        android:layout_weight="0"
                        android:layout_gravity="clip_vertical"
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/mTxtFlickDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-normal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="17.5sp" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>