<resources>
    <string name="app_name">Etermax - SM.Test</string>
    <string name="error_empty_data">No hay datos para mostrar</string>
    <string name="search_flickr">Buscar en flickr..</string>
    <string name="list_type">Tipo de lista</string>
    <string name="no_internet_connection">Sin conexión a internet</string>
    <string name="views">%1$s views</string>

    <string name="transition_image">transition_image</string>
    <string name="transition_image_user">transition_image_user</string>
    <string name="transition_ownername">transition_owner</string>
    <string name="transition_title">transition_title</string>

    <string name="title_activity_image_full"></string>
    <string name="comment">Comment</string>

</resources>
